added conventions to appendix; added stars as neutrino factories.

--- a/preambles.tex
+++ b/preambles.tex
@@ -54,6 +54,11 @@ sorting=ynt
 \usepackage{amsmath}
 \usepackage{amssymb}
 
+\usepackage{tikz}
+\usepackage{adjustbox}
+\usepackage{color}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%  PREAMBLES %%%%%%%%%
