--- a/references.bib
+++ b/references.bib
@@ -187,8 +187,230 @@ year = {2017}
 }
 
 
+@article{Pontecorvo1968,
+author = {Pontecorvo, B},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Pontecorvo/1968 - Sov. Phys. JETP.pdf:pdf},
+journal = {Sov. Phys. JETP},
+mendeley-groups = {Neutrino},
+number = {5},
+pages = {984--988},
+title = {{Neutrino experiments and the problem of conservation of leptonic charge}},
+url = {http://www.jetp.ac.ru/cgi-bin/dn/e{\_}026{\_}05{\_}0984.pdf},
+volume = {26},
+year = {1968}
+}
+
+
+
 %%%%%%% Introduction %%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%% Background %%%%%%%%%%%%%%%%
+
+
+@article{Altmann2001,
+author = {Altmann, Michael F and M{\"{o}}{\ss}bauer, Rudolf L and Oberauer, Lothar J N},
+doi = {10.1088/0034-4885/64/1/203},
+file = {:Users/leima/Documents/Mendeley Desktop/Reports on Progress in Physics/Altmann, M{\"{o}}{\ss}bauer, Oberauer - 2001 - Solar neutrinos.pdf:pdf},
+issn = {0034-4885},
+journal = {Reports on Progress in Physics},
+mendeley-groups = {Neutrino/neutrino-astrophysics},
+month = {jan},
+number = {1},
+pages = {97--146},
+title = {{Solar neutrinos}},
+url = {http://stacks.iop.org/0034-4885/64/i=1/a=203?key=crossref.f5e6ab9425ef6027dd8df16f37c931f5},
+volume = {64},
+year = {2001}
+}
+
+@article{Stonehill2004,
+author = {Stonehill, L. C. and Formaggio, J. A. and Robertson, R. G. H.},
+doi = {10.1103/PhysRevC.69.015801},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review C/Stonehill, Formaggio, Robertson - 2004 - Solar neutrinos from CNO electron capture.pdf:pdf},
+issn = {0556-2813},
+journal = {Physical Review C},
+mendeley-groups = {Neutrino/neutrino-astrophysics},
+number = {1},
+pages = {015801},
+title = {{Solar neutrinos from CNO electron capture}},
+url = {http://link.aps.org/doi/10.1103/PhysRevC.69.015801},
+volume = {69},
+year = {2004}
+}
+
+@article{Adelberger2011a,
+archivePrefix = {arXiv},
+arxivId = {arXiv:1004.2318v3},
+author = {Adelberger, Eg and Garc{\'{\i}}a, a},
+eprint = {arXiv:1004.2318v3},
+file = {:Users/leima/Documents/Mendeley Desktop/Reviews of Modern Physics/Adelberger, Garc{\'{\i}}a - 2011 - Solar fusion cross sections. II. The pp chain and CNO cycles.pdf:pdf},
+journal = {Reviews of Modern {\ldots}},
+mendeley-groups = {Neutrino/neutrino-astrophysics},
+number = {March},
+title = {{Solar fusion cross sections. II. The pp chain and CNO cycles}},
+url = {http://rmp.aps.org/abstract/RMP/v83/i1/p195{\_}1},
+volume = {83},
+year = {2011}
+}
+
+@article{wolf78,
+abstract = {The effect of coherent forward scattering must be taken into account when considering the oscillations of neutrinos traveling through matter. In particular, for the case of massless neutrinos for which vacuum oscillations cannot occur, oscillations can occur in matter if the neutral current has an off-diagonal piece connecting different neutrino types. Applications discussed are solar neutrinos and a proposed experiment involving transmission of neutrinos through 1000 km of rock.},
+author = {Wolfenstein, L.},
+doi = {10.1103/PhysRevD.17.2369},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Wolfenstein - 1978 - Neutrino oscillations in matter.pdf:pdf},
+issn = {0556-2821},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino,Neutrino/MSW},
+month = {may},
+number = {9},
+pages = {2369--2374},
+title = {{Neutrino oscillations in matter}},
+url = {http://link.aps.org/doi/10.1103/PhysRevD.17.2369},
+volume = {17},
+year = {1978}
+}
+
+@article{Bahcall1991,
+      author         = "Bahcall, John N.",
+      title          = "{Shapes of solar neutrino spectra: Unconventional tests
+                        of the standard electroweak model}",
+      journal        = "Phys. Rev.",
+      volume         = "D44",
+      year           = "1991",
+      pages          = "1644-1651",
+      doi            = "10.1103/PhysRevD.44.1644",
+      reportNumber   = "IASSNS-AST-91-26",
+      SLACcitation   = "%%CITATION = PHRVA,D44,1644;%%"
+}
+
+
+
+@article{Castellani1996,
+abstract = {After a short survey of the physics of solar neutrinos, giving an overview of hydrogen burning reactions, predictions of standard solar models and results of solar neutrino experiments, we discuss the solar-model-independent indications in favour of non-standard neutrino properties. The experimental results look to be in contradiction with each other, even disregarding some experiment: unless electron neutrinos disappear in their trip from the sun to the earth, the fluxes of intermediate energy neutrinos (those from 7Be electron capture and from the CNO cycle) result to be unphysically negative, or anyway extremely reduced with respect to standard solar model predictions. Next we review extensively non-standard solar models built as attempts to solve the solar neutrino puzzle. The dependence of the central solar temperature on chemical composition, opacity, age and on the values of the astrophysical S-factors for hydrogen-burning reactions is carefully investigated. Also, possible modifications of the branching among the various pp-chains in view of nuclear physics uncertainties are examined. Assuming standard neutrinos, all solar models examined fail in reconciling theory with experiments, even when the physical and chemical inputs are radically changed with respect to present knowledge and even if some of the experimental results are discarded.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/9606180},
+author = {Castellani, V. and Degl'Innocenti, S. and Fiorentini, G. and Lissia, M. and Ricci, B.},
+doi = {10.1016/S0370-1573(96)00032-4},
+eprint = {9606180},
+file = {:Users/leima/Documents/Mendeley Desktop/Unknown/Castellani et al. - 1996 - Solar neutrinos beyond standard solar models.pdf:pdf},
+issn = {03701573},
+mendeley-groups = {Neutrino/astro},
+pages = {88},
+primaryClass = {astro-ph},
+title = {{Solar neutrinos: beyond standard solar models}},
+url = {http://arxiv.org/abs/astro-ph/9606180},
+year = {1996}
+}
+
+
+@article{Smirnov2003,
+abstract = {The MSW (Mikheyev-Smirnov-Wolfenstein) effect is the effect of transformation of one neutrino species (flavor) into another one in a medium with varying density. Three basic elements of the effect include: the refraction of neutrinos in matter, the resonance (level crossing) and the adiabaticity. The key notion is {\{}$\backslash$it the neutrino eigenstates{\}} in matter. Physical picture of the effect is described in terms of the flavors and the relative phases of eigenstates and the transitions between eigenstates. Features of the large mixing realization of the MSW effect are discussed. The large mixing MSW effect (LMA) provides the solution of the solar neutrino problem. We show in details how this mechanism works. Physics beyond the LMA solution is discussed. The lower {\$}Ar{\$}-production rate (in comparison with the LMA prediction) and absence of significant "turn up" of the spectrum at low energies can be due to an additional effect of the light sterile neutrino with very small mixing.},
+archivePrefix = {arXiv},
+arxivId = {hep-ph/0305106},
+author = {Smirnov, a. Yu.},
+eprint = {0305106},
+file = {:Users/leima/Documents/Mendeley Desktop/Unknown/Smirnov - 2003 - The MSW effect and Solar Neutrinos.pdf:pdf},
+mendeley-groups = {Neutrino/MSW},
+number = {2},
+pages = {23},
+primaryClass = {hep-ph},
+title = {{The MSW effect and Solar Neutrinos}},
+url = {http://arxiv.org/abs/hep-ph/0305106},
+year = {2003}
+}
+
+
+
+@article{Lopes2013,
+author = {Lopes, Il{\'{\i}}dio},
+doi = {10.1103/PhysRevD.88.045006},
+file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Lopes - 2013 - Probing the Sun’s inner core using solar neutrinos A new diagnostic method.pdf:pdf},
+issn = {1550-7998},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/astro},
+number = {4},
+pages = {045006},
+title = {{Probing the Sun’s inner core using solar neutrinos: A new diagnostic method}},
+url = {http://link.aps.org/doi/10.1103/PhysRevD.88.045006},
+volume = {88},
+year = {2013}
+}
+
+
+@article{Lopes2013a,
+author = {Lopes, Il{\'{\i}}dio and Turck-Chi{\`{e}}ze, Sylvaine},
+doi = {10.1088/0004-637X/765/1/14},
+file = {:Users/leima/Documents/Mendeley Desktop/The Astrophysical Journal/Lopes, Turck-Chi{\`{e}}ze - 2013 - Solar Neutrino Physics Oscillations Sensitivity To the Electronic Density in the Sun'S Core.pdf:pdf},
+issn = {0004-637X},
+journal = {The Astrophysical Journal},
+keywords = {color figures,evolution,interior,interiors,neutrinos,online-only material,stars,sun},
+mendeley-groups = {Neutrino/astro},
+number = {1},
+pages = {14},
+title = {{Solar Neutrino Physics Oscillations: Sensitivity To the Electronic Density in the Sun's Core}},
+url = {http://stacks.iop.org/0004-637X/765/i=1/a=14?key=crossref.4cff6dedb7934dd37ee116976e7fa484},
+volume = {765},
+year = {2013}
+}
+
+
+@phdthesis{Keil2003,
+abstract = {We study the flavor-dependent neutrino spectra formation in the core of a supernova (SN) by means of Monte Carlo simulations. A high-statistics neutrino signal from a galactic SN may contain information that severely constrains the parameter space for neutrino oscillations. Therefore, reliable predictions for flavor-dependent fluxes and spectra are urgently needed. In all traditional hydrodynamic simulations the nu{\_}mu,tau and nu{\_}mu,tau-bar interactions commonly included are rather schematic. With our Monte Carlo simulations we find that the most relevant sources for nu{\_}mu,tau and nu{\_}mu,tau-bar are traditionally not included. In comparing our numerical results for all flavors we find the standard hierarchy of mean energies nu{\_}e < nu{\_}e-bar < nu{\_}mu,tau, with, however, very similar values for nu{\_}mu,tau and nu{\_}e-bar. The luminosities of nu{\_}mu,tau and nu{\_}mu,tau-bar can differ by up to a factor of 2 from L{\_}nue-bar and L{\_}nue, the latter two are very similar. The Garching Group obtains similar results from their self-consistent simulation with the full set of interactions. These results are almost orthogonal to the previous standard picture of exactly equal luminosities of all flavors and differences in mean energies of up to a factor of 2. Existing concepts for identifying oscillation effects in a SN neutrino signal need to be revised. We present two methods for detecting the earth-matter effect that are rather independent of predictions from SN simulations.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/0308228},
+author = {Keil, Mathias Th.},
+eprint = {0308228},
+file = {:Users/leima/Documents/Mendeley Desktop/Unknown/Keil - 2003 - Supernova Neutrino Spectra and Applications to Flavor Oscillations.pdf:pdf},
+mendeley-groups = {Neutrino/neutrino-astrophysics},
+primaryClass = {astro-ph},
+title = {{Supernova Neutrino Spectra and Applications to Flavor Oscillations}},
+url = {http://arxiv.org/abs/astro-ph/0308228},
+year = {2003}
+}
+
+
+@inproceedings{ysuzuki2004,
+      author         = "Raffelt, Georg G. and Keil, Mathias Th. and Buras, Robert
+                        and Janka, Hans-Thomas and Rampp, Markus",
+      title          = "{Supernova neutrinos: Flavor-dependent fluxes and
+                        spectra}",
+      booktitle      = "{Neutrino oscillations and their origin. Proceedings, 4th
+                        International Workshop, NOON2003, Kanazawa, Japan,
+                        February 10-14, 2003}",
+      year           = "2003",
+      pages          = "380-387",
+      eprint         = "astro-ph/0303226",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      reportNumber   = "MPI-PHT-2003-12",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0303226;%%"
+}
+
+
+
+@article{Totani1998,
+author = {Totani, T. and Sato, K. and Dalhed, H. E. and Wilson, J. R.},
+doi = {10.1086/305364},
+file = {:Users/leima/Documents/Mendeley Desktop/The Astrophysical Journal/Totani et al. - 1998 - Future Detection of Supernova Neutrino Burst and Explosion Mechanism.pdf:pdf},
+issn = {0004-637X},
+journal = {The Astrophysical Journal},
+mendeley-groups = {Neutrino/astro},
+month = {mar},
+number = {1},
+pages = {216--225},
+title = {{Future Detection of Supernova Neutrino Burst and Explosion Mechanism}},
+url = {http://stacks.iop.org/0004-637X/496/i=1/a=216},
+volume = {496},
+year = {1998}
+}
+
+
+
+%%%%%%%%%%%% Background %%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
@@ -225,22 +447,22 @@ volume = {73},
 year = {2006}
 }
 
-@article{wolf78,
-abstract = {The effect of coherent forward scattering must be taken into account when considering the oscillations of neutrinos traveling through matter. In particular, for the case of massless neutrinos for which vacuum oscillations cannot occur, oscillations can occur in matter if the neutral current has an off-diagonal piece connecting different neutrino types. Applications discussed are solar neutrinos and a proposed experiment involving transmission of neutrinos through 1000 km of rock.},
-author = {Wolfenstein, L.},
-doi = {10.1103/PhysRevD.17.2369},
-file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Wolfenstein - 1978 - Neutrino oscillations in matter.pdf:pdf},
-issn = {0556-2821},
-journal = {Physical Review D},
-mendeley-groups = {Neutrino,Neutrino/MSW},
-month = {May},
-number = {9},
-pages = {2369--2374},
-title = {{Neutrino oscillations in matter}},
-url = {http://link.aps.org/doi/10.1103/PhysRevD.17.2369},
-volume = {17},
-year = {1978}
-}
+% @article{wolf78,
+% abstract = {The effect of coherent forward scattering must be taken into account when considering the oscillations of neutrinos traveling through matter. In particular, for the case of massless neutrinos for which vacuum oscillations cannot occur, oscillations can occur in matter if the neutral current has an off-diagonal piece connecting different neutrino types. Applications discussed are solar neutrinos and a proposed experiment involving transmission of neutrinos through 1000 km of rock.},
+% author = {Wolfenstein, L.},
+% doi = {10.1103/PhysRevD.17.2369},
+% file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Wolfenstein - 1978 - Neutrino oscillations in matter.pdf:pdf},
+% issn = {0556-2821},
+% journal = {Physical Review D},
+% mendeley-groups = {Neutrino,Neutrino/MSW},
+% month = {May},
+% number = {9},
+% pages = {2369--2374},
+% title = {{Neutrino oscillations in matter}},
+% url = {http://link.aps.org/doi/10.1103/PhysRevD.17.2369},
+% volume = {17},
+% year = {1978}
+% }
 
 @article{Mikheev:1986gs,
       author         = "Mikheev, S. P. and Smirnov, A. {\relax Yu}.",
