Updates from ShareLaTeX

--- a/references.bib
+++ b/references.bib
@@ -415,6 +415,27 @@ year = {1998}
 
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%% Neutrinos and Neutrino Oscillations  %%%%%%%
+
+
+
+@article{Patrignani:2016xqp,
+      author         = "Patrignani, C. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C40",
+      year           = "2016",
+      number         = "10",
+      pages          = "100001",
+      doi            = "10.1088/1674-1137/40/10/100001",
+      SLACcitation   = "%%CITATION = CHPHD,C40,100001;%%"
+}
+
+%%%%%% Neutrinos and Neutrino Oscillations  %%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%% Rabi Oscillations %%%%%%%%%%%%%%%%
