Added MSW Flavor Isospin Picture; Revised single frequency rabi

--- a/preambles.tex
+++ b/preambles.tex
@@ -58,6 +58,8 @@ sorting=ynt
 \usepackage{adjustbox}
 \usepackage{color}
 
+\usepackage{caption}
+\usepackage{subcaption}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
