--- a/references.bib
+++ b/references.bib
@@ -408,6 +408,24 @@ year = {1998}
 }
 
 
+@article{Parke1986,
+abstract = {through a resonant oscillation region. If the electron neutrino is produced far above the resonance density, this probability is simply given by "e Analytic results are presented for the probability of detecting an electron neutrino after passage (P„)=sin Hp+ P„cos28p, where Hp is the vacuum mix- ing angle. The probability is averaged over the production as well as the detection positions of the neutrino and P„ is the Landau-Zener transition probability between adiabatic states. Finally, this result is applied to resonance oscillations within the solar interior.},
+author = {Parke, Stephen J.},
+doi = {10.1103/PhysRevLett.57.1275},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Parke/1986 - Physical Review Letters.pdf:pdf},
+issn = {0031-9007},
+journal = {Physical Review Letters},
+mendeley-groups = {Neutrino/MSW},
+month = {sep},
+number = {10},
+pages = {1275--1278},
+title = {{Nonadiabatic Level Crossing in Resonant Neutrino Oscillations}},
+url = {http://link.aps.org/doi/10.1103/PhysRevLett.57.1275},
+volume = {57},
+year = {1986}
+}
+
+
 
 %%%%%%%%%%%% Background %%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -432,6 +450,29 @@ year = {1998}
       doi            = "10.1088/1674-1137/40/10/100001",
       SLACcitation   = "%%CITATION = CHPHD,C40,100001;%%"
 }
+
+
+@article{Duan2006b,
+abstract = {We study the flavor evolution of a dense gas initially consisting of pure mono-energetic {\$}\backslashnu{\_}e{\$} and {\$}\backslashbar\backslashnu{\_}e{\$}. Using adiabatic invariants and the special symmetry in such a system we are able to calculate the flavor evolution of the neutrino gas for the cases with slowly decreasing neutrino number densities. These calculations give new insights into the results of recent large-scale numerical simulations of neutrino flavor transformation in supernovae. For example, our calculations reveal the existence of what we term the ``collective precession mode''. Our analyses suggest that neutrinos which travel on intersecting trajectories subject to destructive quantum interference nevertheless can be in this mode. This mode can result in sharp transitions in the final energy-dependent neutrino survival probabilities across all trajectories, a feature seen in the numerical simulations. Moreover, this transition is qualitatively different for the normal and inverted neutrino mass hierarchies. Exploiting this difference, the neutrino signals from a future galactic supernova can potentially be used to determine the actual neutrino mass hierarchy.},
+archivePrefix = {arXiv},
+arxivId = {astro-ph/0703776},
+author = {Duan, Huaiyu and Fuller, George M. and Qian, Yong-Zhong},
+doi = {10.1103/PhysRevD.74.123004},
+eprint = {0703776},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Duan, Fuller, Qian/2006 - Physical Review D.pdf:pdf},
+issn = {1550-7998},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/collective},
+month = {dec},
+number = {12},
+pages = {123004},
+primaryClass = {astro-ph},
+title = {{Analysis of collective neutrino flavor transformation in supernovae}},
+url = {http://link.aps.org/doi/10.1103/PhysRevD.74.123004},
+volume = {74},
+year = {2006}
+}
+
 
 %%%%%% Neutrinos and Neutrino Oscillations  %%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
