Updates from ShareLaTeX

--- a/preambles.tex
+++ b/preambles.tex
@@ -61,6 +61,7 @@ sorting=ynt
 \usepackage{caption}
 \usepackage{subcaption}
 
+\overfullrule=0pt
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%  PREAMBLES %%%%%%%%%
