wrap up chapter 3

--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -64,6 +64,7 @@
 \include{chapters/introduction}
 \include{chapters/chapter2}
 \include{chapters/chapter3}
+\include{chapters/chapter4}
 \include{chapters/conclusion}
 \include{chapters/appendices}
 
