--- a/references.bib
+++ b/references.bib
@@ -862,3 +862,58 @@ year = {1994}
 
 %%%%%%% Rabi Oscillations %%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%% Appendix %%%%%%%%%%%%%%%%%%%%%%%%%
+
+@article{Ploumistakis2009,
+abstract = {Numerical estimates for pair production from vacuum in the presence of strong electromagnetic fields are derived, for two experimental schemes: the first concerns a laser based X-FEL and the other imitates the E144 experiment. The approximation adopted in this work is that of two level multiphoton on resonance. Utilizing achievable values of laser beam parameters, an enhanced production efficiency of up to 1011and 1015pairs can be obtained, for the two schemes respectively. {\textcopyright} 2009 Elsevier B.V. All rights reserved.},
+archivePrefix = {arXiv},
+arxivId = {0907.2555v1},
+author = {Ploumistakis, I. and Moustaizis, S. D. and Tsohantjis, I.},
+doi = {10.1016/j.physleta.2009.06.015},
+eprint = {0907.2555v1},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Ploumistakis, Moustaizis, Tsohantjis/2009 - Physics Letters, Section A General, Atomic and Solid State Physics.pdf:pdf},
+issn = {03759601},
+journal = {Physics Letters, Section A: General, Atomic and Solid State Physics},
+keywords = {High intensity lasers,Multiphoton processes,Pair production},
+mendeley-groups = {Physics/general},
+number = {32},
+pages = {2897--2900},
+publisher = {Elsevier B.V.},
+title = {{Towards laser based improved experimental schemes for multiphoton e+e-pair production from vacuum}},
+url = {http://dx.doi.org/10.1016/j.physleta.2009.06.015},
+volume = {373},
+year = {2009}
+}
+
+
+
+
+@article{Izaguirre2016a,
+abstract = {Collective pair conversion {\$}\backslashnu{\_}e\backslashbar\backslashnu{\_}e\backslashleftrightarrow \backslashnu{\_}{\{}x{\}}\backslashbar\backslashnu{\_}{\{}x{\}}{\$} by forward scattering, where {\$}x=\backslashmu{\$} or {\$}\backslashtau{\$}, may be generic for supernova neutrino transport. Depending on the local angular intensity of the electron lepton number carried by neutrinos, the conversion rate is "fast," i.e., of the order of {\$}\backslashsqrt{\{}2{\}}G{\_}{\{}\backslashrm{\{}F{\}}{\}}(n{\_}{\{}\backslashnu{\_}e{\}}{\{}-{\}}\backslash,n{\_}{\{}\backslashbar\backslashnu{\_}e{\}})\backslashgg\backslashDelta m{\^{}}2{\_}{\{}\backslashrm atm{\}}/2E{\$}. We present a novel approach to understand these phenomena: A dispersion relation for the frequency and wave number {\$}(\backslashOmega,\backslashbf{\{}K{\}}){\$} of disturbances in the mean field of {\$}\backslashnu{\_}e\backslashnu{\_}x{\$} flavor coherence. Run-away solutions occur in "dispersion gaps," i.e., in "forbidden" intervals of {\$}\backslashOmega{\$} and/or {\$}\backslashbf{\{}K{\}}{\$} where propagating plane waves do not exist. We stress that the actual solutions also depend on the initial and/or boundary conditions which need to be further investigated.},
+archivePrefix = {arXiv},
+arxivId = {1610.01612},
+author = {Izaguirre, Ignacio and Raffelt, Georg and Tamborra, Irene},
+doi = {10.1103/PhysRevLett.118.021101},
+eprint = {1610.01612},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Izaguirre, Raffelt, Tamborra/2017 - Physical Review Letters.pdf:pdf},
+issn = {0031-9007},
+journal = {Physical Review Letters},
+mendeley-groups = {Neutrino/collective},
+month = {jan},
+number = {2},
+pages = {021101},
+title = {{Fast Pairwise Conversion of Supernova Neutrinos: A Dispersion Relation Approach}},
+url = {http://arxiv.org/abs/1610.01612 http://link.aps.org/doi/10.1103/PhysRevLett.118.021101},
+volume = {118},
+year = {2017}
+}
+
+
+
+
+%%%%%%%%% Appendix %%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
