so fucking hate this world

--- a/preambles.tex
+++ b/preambles.tex
@@ -57,6 +57,11 @@ sorting=ynt
 \usepackage{tikz}
 \usepackage{adjustbox}
 \usepackage{color}
+\usepackage{xcolor}
+
+\usepackage[normalem]{ulem}
+\usepackage{accents}
+\usepackage{mathrsfs}
 
 \usepackage{caption}
 \usepackage{subcaption}
@@ -77,6 +82,11 @@ sorting=ynt
 \newcommand{\RD}{D}
 \newcommand{\ri}{\mathrm{i}}
 \DeclareMathOperator{\sign}{sign}
+
+
+
+\newcommand{\ii}{\mathrm i}
+
 
 %%%%%%  PREAMBLES %%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
