--- a/references.bib
+++ b/references.bib
@@ -865,6 +865,189 @@ year = {1994}
 
 
 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%% Dispersion Relation %%%%%%%%%%
+
+@article{Duan2009,
+abstract = {We discuss the relationship between a symmetry in the neutrino flavour evolution equations and neutrino flavour oscillations in the collective precession mode. This collective precession mode can give rise to spectral swaps (splits) when conditions can be approximated as homogeneous and isotropic. Multi-angle numerical simulations of supernova neutrino flavour transformation show that when this approximation breaks down, non-collective neutrino oscillation modes decohere kinematically, but the collective precession mode still is expected to stand out. We provide a criterion for significant flavour transformation to occur if neutrinos participate in a collective precession mode. This criterion can be used to understand the suppression of collective neutrino oscillations in anisotropic environments in the presence of a high matter density. This criterion is also useful in understanding the breakdown of the collective precession mode when neutrino densities are small.},
+archivePrefix = {arXiv},
+arxivId = {0808.2046},
+author = {Duan, Huaiyu and Fuller, George M and Qian, Y-Z},
+doi = {10.1088/0954-3899/36/10/105003},
+eprint = {0808.2046},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Duan, Fuller, Qian - 2009 - Journal of Physics G Nuclear and Particle Physics.pdf:pdf},
+issn = {0954-3899},
+journal = {Journal of Physics G: Nuclear and Particle Physics},
+mendeley-groups = {Neutrino/collective},
+number = {10},
+pages = {105003},
+title = {{Neutrino Flavor Spin Waves}},
+url = {http://stacks.iop.org/0954-3899/36/i=10/a=105003?key=crossref.263a789639310d799b274eede970d2e5{\%}5Cnhttp://arxiv.org/abs/0808.2046{\%}5Cnhttp://dx.doi.org/10.1088/0954-3899/36/10/105003},
+volume = {36},
+year = {2009}
+}
+
+@article{Banerjee2011a,
+abstract = {Neutrino-neutrino interactions in dense neutrino streams, like those emitted by a core-collapse supernova, can lead to self-induced neutrino flavor conversions. While this is a nonlinear phenomenon, the onset of these conversions can be examined through a standard stability analysis of the linearized equations of motion. The problem is reduced to a linear eigenvalue equation that involves the neutrino density, energy spectrum, angular distribution, and matter density. In the single-angle case, we reproduce previous results and use them to identify two generic instabilities: The system is stable above a cutoff density ("cutoff mode"), or can approach an asymptotic instability for increasing density ("saturation mode"). We analyze multi-angle effects on these generic types of instabilities and find that even the saturation mode is suppressed at large densities. For both types of modes, a given multi-angle spectrum typically is unstable when the neutrino and electron densities are comparable, but stable when the neutrino density is much smaller or much larger than the electron density. The role of an instability in the SN context depends on the available growth time and on the range of affected modes. At large matter density, most modes are off-resonance even when the system is unstable.},
+annote = {A Single Spectral Zero Crossing
+Multiple Spectral Crossing},
+archivePrefix = {arXiv},
+arxivId = {hep-ph/1107.2308},
+author = {Banerjee, Arka and Dighe, Amol and Raffelt, Georg},
+doi = {10.1103/PhysRevD.84.053013},
+eprint = {1107.2308},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Banerjee, Dighe, Raffelt - 2011 - Physical Review D - Particles, Fields, Gravitation and Cosmology.pdf:pdf},
+issn = {1550-7998},
+journal = {Physical Review D},
+mendeley-groups = {Neutrino/collective},
+month = {sep},
+number = {5},
+pages = {053013},
+primaryClass = {hep-ph},
+title = {{Linearized flavor-stability analysis of dense neutrino streams}},
+url = {https://link.aps.org/doi/10.1103/PhysRevD.84.053013},
+volume = {84},
+year = {2011}
+}
+
+
+@article{Raffelt2013,
+author = {Raffelt, Georg and Sarikas, Srdjan and Seixas, David De Sousa},
+doi = {10.1103/PhysRevLett.111.091101},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Raffelt, Sarikas, Seixas - 2013 - Physical Review Letters.pdf:pdf},
+issn = {0031-9007},
+journal = {Physical Review Letters},
+mendeley-groups = {Neutrino,Neutrino/collective},
+month = {aug},
+number = {9},
+pages = {091101},
+title = {{Axial Symmetry Breaking in Self-Induced Flavor Conversionof Supernova Neutrino Fluxes}},
+url = {http://link.aps.org/doi/10.1103/PhysRevLett.111.091101 https://link.aps.org/doi/10.1103/PhysRevLett.111.091101},
+volume = {111},
+year = {2013}
+}
+
+
+@article{Izaguirre2016a,
+abstract = {Collective pair conversion {\$}\backslashnu{\_}e\backslashbar\backslashnu{\_}e\backslashleftrightarrow \backslashnu{\_}{\{}x{\}}\backslashbar\backslashnu{\_}{\{}x{\}}{\$} by forward scattering, where {\$}x=\backslashmu{\$} or {\$}\backslashtau{\$}, may be generic for supernova neutrino transport. Depending on the local angular intensity of the electron lepton number carried by neutrinos, the conversion rate is "fast," i.e., of the order of {\$}\backslashsqrt{\{}2{\}}G{\_}{\{}\backslashrm{\{}F{\}}{\}}(n{\_}{\{}\backslashnu{\_}e{\}}{\{}-{\}}\backslash,n{\_}{\{}\backslashbar\backslashnu{\_}e{\}})\backslashgg\backslashDelta m{\^{}}2{\_}{\{}\backslashrm atm{\}}/2E{\$}. We present a novel approach to understand these phenomena: A dispersion relation for the frequency and wave number {\$}(\backslashOmega,\backslashbf{\{}K{\}}){\$} of disturbances in the mean field of {\$}\backslashnu{\_}e\backslashnu{\_}x{\$} flavor coherence. Run-away solutions occur in "dispersion gaps," i.e., in "forbidden" intervals of {\$}\backslashOmega{\$} and/or {\$}\backslashbf{\{}K{\}}{\$} where propagating plane waves do not exist. We stress that the actual solutions also depend on the initial and/or boundary conditions which need to be further investigated.},
+archivePrefix = {arXiv},
+arxivId = {1610.01612},
+author = {Izaguirre, Ignacio and Raffelt, Georg and Tamborra, Irene},
+doi = {10.1103/PhysRevLett.118.021101},
+eprint = {1610.01612},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Izaguirre, Raffelt, Tamborra - 2017 - Physical Review Letters.pdf:pdf},
+issn = {0031-9007},
+journal = {Physical Review Letters},
+mendeley-groups = {Neutrino/collective},
+month = {jan},
+number = {2},
+pages = {021101},
+title = {{Fast Pairwise Conversion of Supernova Neutrinos: A Dispersion Relation Approach}},
+url = {http://arxiv.org/abs/1610.01612 http://link.aps.org/doi/10.1103/PhysRevLett.118.021101},
+volume = {118},
+year = {2017}
+}
+
+
+@article{Sawyer2016,
+abstract = {The usual treatments of the neutrino flavor-evolution, beyond a surface above the last scattering, assume identical angular distributions at this distance for the different initial (unmixed) flavors, and for particles and antiparticles. Taking into account differences in these distributions that must be present, as a result of the species-dependent scattering cross-sections lower down in the star, leads to a new set of non-linear equations. These equations are unstable, even at the initial surface, with respect to perturbations that have both tiny mixing from neutrino oscillations and that break all-over spherical-symmetry. There could be important consequences for: 1) the dynamics of the explosion, 2) R-process-nucleosynthesis, and 3) some future observable neutrino pulse.},
+archivePrefix = {arXiv},
+arxivId = {1509.03323},
+author = {Sawyer, R. F.},
+doi = {10.1103/PhysRevLett.116.081101},
+eprint = {1509.03323},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Sawyer - 2016 - Physical Review Letters.pdf:pdf},
+issn = {10797114},
+journal = {Physical Review Letters},
+mendeley-groups = {Neutrino/collective},
+number = {8},
+pages = {1--5},
+title = {{Neutrino Cloud Instabilities Just above the Neutrino Sphere of a Supernova}},
+volume = {116},
+year = {2016}
+}
+
+@misc{garching-ccsn-data,
+mendeley-groups = {Neutrino/supernova},
+title = {{The Garching Core-Collapse Supernova Archive, http://wwwmpa.mpa-garching.mpg.de/ccsnarchive/archive.html}},
+url = {http://wwwmpa.mpa-garching.mpg.de/ccsnarchive/archive.html}
+}
+
+@article{Duan2010,
+abstract = {We review the rich phenomena associated with neutrino flavor transformation in the presence of neutrino self-coupling. Our exposition centers on three collective neutrino oscillation scenarios: a simple bipolar neutrino system that initially consists of mono-energetic electron neutrinos and antineutrinos; a homogeneous and isotropic neutrino gas with multiple neutrino/antineutrino species and continuous energy spectra; and a generic neutrino gas in an anisotropic environment. We use each of these scenarios to illustrate key facets of collective neutrino oscillations. We discuss the implications of collective neutrino flavor oscillations for core collapse supernova physics and for the prospects of obtaining fundamental neutrino properties, e.g., the neutrino mass hierarchy and {\$}\backslashtheta{\_}{\{}13{\}}{\$} from a future observed supernova neutrino signal.},
+annote = {NULL},
+archivePrefix = {arXiv},
+arxivId = {1001.2799},
+author = {Duan, Huaiyu and Fuller, George M. and Qian, Yong-Zhong},
+doi = {10.1146/annurev.nucl.012809.104524},
+eprint = {1001.2799},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Duan, Fuller, Qian/2010 - Annual Review of Nuclear and Particle Science.pdf:pdf},
+issn = {0163-8998},
+journal = {Annual Review of Nuclear and Particle Science},
+keywords = {neutrino masses and mixings,neutrino spectral swaps,splits,supernova},
+mendeley-groups = {Neutrino,Neutrino/collective},
+month = {nov},
+number = {1},
+pages = {569--594},
+title = {{Collective Neutrino Oscillations}},
+url = {http://arxiv.org/abs/1001.2799 http://www.annualreviews.org/doi/10.1146/annurev.nucl.012809.104524},
+volume = {60},
+year = {2010}
+}
+
+
+@article{Chakraborty2016,
+abstract = {Neutrino-neutrino refraction in dense media can cause self-induced flavor conversion triggered by collective run-away modes of the interacting flavor oscillators. The growth rates were usually found to be of order a typical vacuum oscillation frequency {\$}\backslashDelta m{\^{}}2/2E{\$}. However, even in the simple case of a {\$}\backslashnu{\_}e{\$} beam interacting with an opposite-moving {\$}\backslashbar\backslashnu{\_}e{\$} beam, and allowing for spatial inhomogeneities, the growth rate of the fastest-growing Fourier mode is of order {\$}\backslashmu=\backslashsqrt{\{}2{\}} G{\_}{\{}\backslashrm F{\}} n{\_}{\{}\backslashnu{\}}{\$}, a typical {\$}\backslashnu{\$}--{\$}\backslashnu{\$} interaction energy. This growth rate is much larger than the vacuum oscillation frequency and gives rise to flavor conversion on a much shorter time scale. This phenomenon of "fast flavor conversion" occurs even for vanishing {\$}\backslashDelta m{\^{}}2/2E{\$} and thus does not depend on energy, but only on the angle distributions. Moreover, it does not require neutrinos to mix or to have masses, except perhaps for providing seed disturbances. We also construct a simple homogeneous example consisting of intersecting beams and study a schematic supernova model proposed by Ray Sawyer, where {\$}\backslashnu{\_}e{\$} and {\$}\backslashbar\backslashnu{\_}e{\$} emerge with different zenith-angle distributions, the key ingredient for fast flavor conversion. What happens in realistic astrophysical scenarios remains to be understood.},
+archivePrefix = {arXiv},
+arxivId = {1602.00698},
+author = {Chakraborty, Sovan and Hansen, Rasmus Sloth and Izaguirre, Ignacio and Raffelt, G.G.},
+doi = {10.1088/1475-7516/2016/03/042},
+eprint = {1602.00698},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Chakraborty et al/2016 - Unknown(2).pdf:pdf},
+issn = {1475-7516},
+journal = {Journal of Cosmology and Astroparticle Physics},
+mendeley-groups = {Neutrino/collective},
+month = {mar},
+number = {03},
+pages = {042--042},
+title = {{Self-induced neutrino flavor conversion without flavor mixing}},
+url = {http://arxiv.org/abs/1602.00698{\%}0Ahttp://dx.doi.org/10.1088/1475-7516/2016/03/042 http://stacks.iop.org/1475-7516/2016/i=03/a=042?key=crossref.13cc95271dc6922edc44d8995330a5a6},
+volume = {2016},
+year = {2016}
+}
+
+
+@article{Dasgupta2017,
+abstract = {It has been recently pointed out that neutrino fluxes from a supernova can show substantial flavor conversions almost immediately above the core. Using linear stability analyses and numerical solutions of the fully nonlinear equations of motion, we perform a detailed study of these fast conversions, focussing on the region just above the supernova core. We carefully specify the instabilities for evolution in space or time, andfind that neutrinos travelling towards the core make fast conversions more generic, i.e., possible for a wider range of flux ratios and angular asymmetries that produce a crossing between the zenith-angle spectra of {\$}\backslashnu{\_}e{\$} and {\$}{\{}\backslashbar\backslashnu{\_}e{\}}{\$}. Using fluxes and angular distributions predicted by supernova simulations, we find that fast conversions can occur within tens of nanoseconds, only a few meters away from the putative neutrinospheres. If these fast flavor conversions indeed take place, they would have important implications for the supernova explosion mechanism and nucleosynthesis.},
+archivePrefix = {arXiv},
+arxivId = {1609.00528},
+author = {Dasgupta, Basudeb and Mirizzi, Alessandro and Sen, Manibrata},
+doi = {10.1088/1475-7516/2017/02/019},
+eprint = {1609.00528},
+file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Dasgupta, Mirizzi, Sen/2017 - Journal of Cosmology and Astroparticle Physics.pdf:pdf},
+issn = {1475-7516},
+journal = {Journal of Cosmology and Astroparticle Physics},
+mendeley-groups = {Neutrino/collective},
+month = {feb},
+number = {02},
+pages = {019--019},
+title = {{Fast neutrino flavor conversions near the supernova core with realistic flavor-dependent angular distributions}},
+url = {http://arxiv.org/abs/1609.00528{\%}0Ahttp://dx.doi.org/10.1088/1475-7516/2017/02/019 http://stacks.iop.org/1475-7516/2017/i=02/a=019?key=crossref.2c696f3fb9fb66ce68da8c31bb8af90c},
+volume = {2017},
+year = {2017}
+}
+
+
+
+%%%%%%%%%%%%% Dispersion Relation %%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%% Appendix %%%%%%%%%%%%%%%%%%%%%%%%%
 
